issue#2678 added capability to send email directly to recipient